# pathcraft

./: .env.example  .gitignore  README.md  chainlit.md  pyproject.toml  requirements.txt
.chainlit/: config.toml
.chainlit/translations/: en-US.json
src/pathcraft/: __init__.py  app.py  cli.py  config.py
src/pathcraft/engines/: __init__.py  fuel_engine.py  route_engine.py  scenic_engine.py  stop_planner.py
src/pathcraft/services/: __init__.py  chat_assistant.py  itinerary.py  planner.py  recommender.py
